--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "react-table-mui-ts",
-  "version": "0.0.1",
+  "version": "0.0.12",
   "private": true,
+  "type": "module",
+  "source": "index.ts",
+  "module": "./dist/react-table-mui-ts.modern.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && rollup -c"
+    "build": "rimraf ./dist && microbundle && npm-dts -o ./dist/index.d.ts generate",
+    "start": "microbundle watch --no-compress"
   },
-  "main": "./dist/bundle.js",
   "engines": {
     "node": "^16.15.0"
   },
@@ -19,31 +23,14 @@
     "classnames": "^2.3.1",
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-is": "^18.1.0",
     "react-json-view": "^1.21.3",
     "react-table": "^7.7.0"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2",
-    "@mui/material": "^5.8.2",
-    "@mui/styles": "^5.8.0",
-    "@mui/system": "^5.8.2",
-    "classnames": "^2.3.1",
-    "match-sorter": "^6.3.1",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2 || ^18.1.0",
-    "react-dom": "^17.0.2 || ^18.1.0",
-    "react-is": "^18.1.0",
-    "react-json-view": "^1.21.3",
-    "react-table": "^7.7.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.197",
-    "@swc/helpers": "^0.3.17",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
@@ -58,11 +45,10 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "microbundle": "^0.15.0",
+    "npm-dts": "^1.3.11",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.75.6",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
-    "rollup-plugin-swc3": "^0.3.0",
     "typescript": "^4.7.2"
   }
 }
