--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "react-table-mui-ts",
-  "version": "0.0.12",
+  "version": "0.0.20",
   "private": true,
   "type": "module",
   "source": "index.ts",
   "module": "./dist/react-table-mui-ts.modern.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rimraf ./dist && microbundle && npm-dts -o ./dist/index.d.ts generate",
-    "start": "microbundle watch --no-compress"
+    "mb": "microbundle --globals react=React --jsx React.createElement --jsxFragment React.Fragment",
+    "build": "rimraf ./dist && yarn run mb --no-compress && npm-dts -o ./dist/index.d.ts generate",
+    "start": "yarn run mb watch --no-compress"
   },
   "engines": {
     "node": "^16.15.0"
