--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "react-table-mui-ts",
-  "version": "0.0.20",
-  "private": true,
+  "name": "react-table-mui",
+  "version": "0.0.1",
+  "license": "MIT",
   "type": "module",
   "source": "index.ts",
-  "module": "./dist/react-table-mui-ts.modern.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "mb": "microbundle --globals react=React --jsx React.createElement --jsxFragment React.Fragment",
-    "build": "rimraf ./dist && yarn run mb --no-compress && npm-dts -o ./dist/index.d.ts generate",
-    "start": "yarn run mb watch --no-compress"
+    "build": "rimraf ./dist && rollup -c"
   },
   "engines": {
     "node": "^16.15.0"
@@ -24,7 +22,6 @@
     "classnames": "^2.3.1",
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
-    "react-json-view": "^1.21.3",
     "react-table": "^7.7.0"
   },
   "peerDependencies": {
@@ -32,6 +29,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@swc/core": "^1.2.197",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
@@ -46,10 +46,14 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "microbundle": "^0.15.0",
-    "npm-dts": "^1.3.11",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
+    "rollup": "^2.75.6",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-swc3": "^0.3.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.2"
   }
 }
