--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-table": "^7.7.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2 || ^18.1.0",
+    "react-dom": "^17.0.2 || ^18.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
