--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-table-mui-ts",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "author": "Bevan Hunt",
   "description": "react-table mui table ready to plug into your project!",
   "license": "MIT",
   "homepage": "https://github.com/bevanhunt/react-table-mui-ts#readme",
